Add ERC20 token variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ MUMBAI_RPC_URL=your_mumbai_rpc_url_here
 POLYGON_RPC_URL=your_polygon_rpc_url_here
 POLYGONSCAN_API_KEY=your_polygonscan_api_key_here
 COINMARKETCAP_API_KEY=your_coinmarketcap_api_key_here
+
+# ERC20 Token Configuration
+ERC20_TOKEN_ADDRESS=0xa411c9Aa00E020e4f88Bc19996d29c5B7ADB4ACf
+ERC20_TOKEN_SYMBOL=XOC
+ERC20_TOKEN_DECIMALS=18
